--- a/Juno/tower/src/app/auth/login/login.component.html
+++ b/Juno/tower/src/app/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="pallas-login">
+<div class="pallas-login" appGeometricElf>
   <nz-card class="pallas-login-box" nzHoverable>
     <form nz-form [formGroup]="validateForm" class="login-form" (ngSubmit)="submitForm()">
       <nz-form-item>
