--- a/Juno/tower/src/app/auth/login/login.component.scss
+++ b/Juno/tower/src/app/auth/login/login.component.scss
@@ -1,8 +1,24 @@
-.pallas-login {
+.tower-login {
   width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  &-box {
+    cursor: default;
+    width: 260px;
+    &-header {
+      flex-direction: column;
+      text-align: center;
+      font-size: 1.3em;
+      padding-bottom: 0.5em;
+      font-weight: bold;
+    }
+    &-footer {
+      &-register {
+        text-align: right;
+      }
+    }
+  }
 }
