--- a/Juno/tower/src/app/auth/login/login.component.html
+++ b/Juno/tower/src/app/auth/login/login.component.html
@@ -1,32 +1,32 @@
-<div class="pallas-login" appGeometricElf>
-  <nz-card class="pallas-login-box" nzHoverable>
-    <form nz-form [formGroup]="validateForm" class="login-form" (ngSubmit)="submitForm()">
+<div class="tower-login" appGeometricElf>
+  <nz-card class="tower-login-box" nzHoverable>
+    <form nz-form [formGroup]="validateForm" [nzAutoTips]="autoTips" class="login-form" (ngSubmit)="submitForm()">
+      <div nz-row class="tower-login-box-header">
+        Tower
+      </div>
       <nz-form-item>
-        <nz-form-control nzErrorTip="Please input your username!">
+        <nz-form-control>
           <nz-input-group nzPrefixIcon="user">
-            <input type="text" nz-input formControlName="userName" placeholder="Username" />
+            <input type="text" nz-input formControlName="username" placeholder="用户名" />
           </nz-input-group>
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
-        <nz-form-control nzErrorTip="Please input your Password!">
+        <nz-form-control>
           <nz-input-group nzPrefixIcon="lock">
-            <input type="password" nz-input formControlName="password" placeholder="Password" />
+            <input type="password" nz-input formControlName="password" placeholder="密码" />
           </nz-input-group>
         </nz-form-control>
       </nz-form-item>
-      <div nz-row class="login-form-margin">
+      <div nz-row class="tower-login-box-footer">
+        <button nz-col [nzSpan]="24" nz-button [nzType]="'primary'">登录</button>
         <div nz-col [nzSpan]="12">
-          <label nz-checkbox formControlName="remember">
-            <span>Remember me</span>
-          </label>
+          <a>忘记密码</a>
         </div>
-        <div nz-col [nzSpan]="12">
-          <a class="login-form-forgot">Forgot password</a>
+        <div class="tower-login-box-footer-register" nz-col [nzSpan]="12">
+          <a>注册</a>
         </div>
       </div>
-      <button nz-button class="login-form-button login-form-margin" [nzType]="'primary'">Log in</button>
-      Or <a> register now! </a>
     </form>
   </nz-card>
 </div>
