--- a/Juno/tower/src/app/bench/layout/layout.component.html
+++ b/Juno/tower/src/app/bench/layout/layout.component.html
@@ -1,10 +1,6 @@
 <nz-layout class="app-layout">
-  <nz-sider class="menu-sidebar"
-            nzCollapsible
-            nzWidth="200px"
-            nzBreakpoint="md"
-            [(nzCollapsed)]="isCollapsed"
-            [nzTrigger]="null">
+  <nz-sider class="menu-sidebar" nzCollapsible nzWidth="200px" nzBreakpoint="md" [(nzCollapsed)]="isCollapsed"
+    [nzTrigger]="null">
     <div class="sidebar-logo">
       <a href="#" target="_blank">
         <i nz-icon [nzIconfont]="'icon-tower'"></i>
@@ -16,11 +12,12 @@
   <nz-layout>
     <nz-header>
       <div class="app-header">
-        <span class="header-trigger" (click)="isCollapsed = !isCollapsed">
-            <i class="trigger"
-               nz-icon
-               [nzType]="isCollapsed ? 'menu-unfold' : 'menu-fold'"
-            ></i>
+        <span class="app-header-trigger header-trigger" (click)="isCollapsed = !isCollapsed">
+          <i nz-icon [nzType]="isCollapsed ? 'menu-unfold' : 'menu-fold'"></i>
+        </span>
+        <span class="header-user">
+          <span class="header-user-username">user</span>
+          <a nz-button nzSize="small" nzType="link"><i nz-icon nzType="logout"></i>退出</a>
         </span>
       </div>
     </nz-header>
