--- a/Juno/tower/src/app/bench/layout/layout.component.scss
+++ b/Juno/tower/src/app/bench/layout/layout.component.scss
@@ -47,17 +47,23 @@ nz-header {
   .app-header {
     position: relative;
     height: 64px;
-    padding: 0;
+    padding: 0 24px;
     background: #fff;
     box-shadow: 0 1px 4px rgba(0,21,41,.08);
+    &-trigger:hover {
+      color: #1890ff;
+      cursor: pointer;
+    }
     .header-trigger {
       height: 64px;
-      padding: 20px 24px;
+      padding: 20px 0;
       font-size: 20px;
-      cursor: pointer;
       transition: all .3s,padding 0s;
-      .trigger:hover {
-        color: #1890ff;
+    }
+    .header-user {
+      float: right;
+      &-username {
+        cursor: pointer;
       }
     }
   }
