--- a/Juno/tower/src/app/auth/login/login.component.html
+++ b/Juno/tower/src/app/auth/login/login.component.html
@@ -19,7 +19,7 @@
         </nz-form-control>
       </nz-form-item>
       <div nz-row class="tower-login-box-footer">
-        <button nz-col [nzSpan]="24" nz-button [nzType]="'primary'">登录</button>
+        <button nz-col [nzSpan]="24" nz-button [nzType]="'primary'" [nzLoading]="loginLoading">登录</button>
         <div nz-col [nzSpan]="12">
           <a>忘记密码</a>
         </div>
