--- a/Juno/tower/src/app/bench/layout/layout.component.html
+++ b/Juno/tower/src/app/bench/layout/layout.component.html
@@ -16,8 +16,8 @@
           <i nz-icon [nzType]="isCollapsed ? 'menu-unfold' : 'menu-fold'"></i>
         </span>
         <span class="header-user">
-          <span class="header-user-username">user</span>
-          <a nz-button nzSize="small" nzType="link" (click)="logout()"><i nz-icon nzType="logout"></i>退出</a>
+          <span class="header-user-username">{{user?.username}}</span>
+          <a class="header-user-logout" nz-button nzSize="small" nzType="link" (click)="logout()"><i nz-icon nzType="logout"></i>退出</a>
         </span>
       </div>
     </nz-header>
