--- a/Juno/tower/src/app/bench/layout/layout.component.scss
+++ b/Juno/tower/src/app/bench/layout/layout.component.scss
@@ -64,6 +64,10 @@ nz-header {
       float: right;
       &-username {
         cursor: pointer;
+        padding-right: 10px;
+      }
+      &-logout {
+        font-size: 12px;
       }
     }
   }
