--- a/Juno/tower/src/app/bench/pages/home/home.component.html
+++ b/Juno/tower/src/app/bench/pages/home/home.component.html
@@ -1,1 +1,3 @@
-<div appGraph style="width: 100px;height:100px;" www="123123"></div>
+<nz-layout class="container">
+  <nz-content><div appGraph></div></nz-content>
+</nz-layout>
