--- a/Juno/tower/src/app/bench/pages/menu-management/menu-management.component.html
+++ b/Juno/tower/src/app/bench/pages/menu-management/menu-management.component.html
@@ -1,1 +1,4 @@
-<p>menu-management works!</p>
+<nz-tree class="container" [nzData]="nodes" nzCheckable nzMultiple [nzCheckedKeys]="defaultCheckedKeys"
+  [nzExpandedKeys]="defaultExpandedKeys" [nzSelectedKeys]="defaultSelectedKeys" (nzClick)="nzEvent($event)"
+  (nzExpandChange)="nzEvent($event)" (nzCheckBoxChange)="nzEvent($event)">
+</nz-tree>
