--- a/Juno/tower/src/app/bench/layout/layout.component.scss
+++ b/Juno/tower/src/app/bench/layout/layout.component.scss
@@ -5,13 +5,22 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+:host ::ng-deep nz-layout {
+  display: flex;
+  height: 100%;
+}
+:host ::ng-deep nz-header {
+  height: 30px;
+  line-height: 30px;
+}
+
 .app-layout {
   height: 100vh;
   .menu-sidebar {
     position: relative;
     z-index: 10;
     min-height: 100vh;
-    box-shadow: 2px 0 6px rgba(0,21,41,.35);
+    box-shadow: 2px 0 6px rgba(0, 21, 41, 0.35);
     .sidebar-logo {
       position: relative;
       height: 64px;
@@ -19,7 +28,7 @@
       overflow: hidden;
       line-height: 64px;
       background: #001529;
-      transition: all .3s;
+      transition: all 0.3s;
       i {
         display: inline-block;
         height: 32px;
@@ -33,7 +42,7 @@
         color: #fff;
         font-weight: 600;
         font-size: 14px;
-        font-family: Avenir,Helvetica Neue,Arial,Helvetica,sans-serif;
+        font-family: Avenir, Helvetica Neue, Arial, Helvetica, sans-serif;
         vertical-align: middle;
       }
     }
@@ -44,12 +53,13 @@ nz-header {
   padding: 0;
   width: 100%;
   z-index: 2;
+  height: 64px;
+  line-height: 64px;
   .app-header {
     position: relative;
-    height: 64px;
     padding: 0 24px;
     background: #fff;
-    box-shadow: 0 1px 4px rgba(0,21,41,.08);
+    box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
     &-trigger:hover {
       color: #1890ff;
       cursor: pointer;
@@ -58,7 +68,7 @@ nz-header {
       height: 64px;
       padding: 20px 0;
       font-size: 20px;
-      transition: all .3s,padding 0s;
+      transition: all 0.3s, padding 0s;
     }
     .header-user {
       float: right;
@@ -74,15 +84,9 @@ nz-header {
 }
 
 nz-content {
-  margin: 24px;
   .inner-content {
-    padding: 24px;
+    padding: 16px;
     background: #fff;
     height: 100%;
   }
-}
-
-:host ::ng-deep .container {
-  display: flex;
-  height: 100%;
 }
