--- a/Juno/tower/src/theme.less
+++ b/Juno/tower/src/theme.less
@@ -1,4 +1,5 @@
 @import "../node_modules/ng-zorro-antd/ng-zorro-antd.less";
+@import "./styles.less";
 @theme: default;
 
 // The prefix to use on all css classes from ant.
@@ -16,8 +17,6 @@
 @highlight-color: @red-5;
 @warning-color: @gold-6;
 @normal-color: #d9d9d9;
-@white: #fff;
-@black: #000;
 
 // Color used by default to control hover and active backgrounds and for
 // alert info backgrounds.
@@ -127,13 +126,6 @@
 @ease-out-quint: cubic-bezier(0.23, 1, 0.32, 1);
 @ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
 @ease-in-out-quint: cubic-bezier(0.86, 0, 0.07, 1);
-
-// Border color
-@border-color-base: hsv(0, 0, 85%); // base border outline a component
-@border-color-split: hsv(0, 0, 94%); // split border inside a component
-@border-color-inverse: @white;
-@border-width-base: 1px; // width of the border for a component
-@border-style-base: solid; // style of a components border
 
 // Outline
 @outline-blur-size: 0;
@@ -296,7 +288,7 @@
 @layout-body-background: #fff;
 @layout-header-background: #fff;
 @layout-header-height: 64px;
-@layout-header-padding: 0 24px;
+@layout-header-padding: 0 50px;
 @layout-header-color: @text-color;
 @layout-footer-padding: 24px 24px;
 @layout-footer-background: @layout-body-background;
