--- a/Juno/tower/src/app/bench/layout/layout.component.less
+++ b/Juno/tower/src/app/bench/layout/layout.component.less
@@ -11,20 +11,11 @@
   height: 100%;
 }
 :host ::ng-deep nz-header {
-  height: 40px;
-  line-height: 30px;
+  min-height: 45px;
+  height: auto;
+  line-height: 35px;
   padding: 5px 10px;
   position: relative;
-  &::after {
-    content: "";
-    width: 90%;
-    left: 5%;
-    bottom: 0;
-    height: 0;
-    padding: 0 20px;
-    border-bottom: solid 1px @border-color-base;
-    position: absolute;
-  }
 }
 
 .app-layout {
