--- a/Juno/tower/src/styles.less
+++ b/Juno/tower/src/styles.less
@@ -6,3 +6,14 @@
 @border-color-inverse: @white;
 @border-width-base: 1px; // width of the border for a component
 @border-style-base: solid; // style of a components border
+
+nz-spin {
+  height: 100%;
+  .ng-star-inserted {
+    display: flex;
+    height: 100%;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+}
