--- a/Juno/tower/src/app/bench/pages/menu-management/menu-management.component.less
+++ b/Juno/tower/src/app/bench/pages/menu-management/menu-management.component.less
@@ -33,3 +33,11 @@
     opacity: 1;
   }
 }
+.tree-node-title {
+  color: #808080;
+}
+.tree-branch-node {
+  .tree-node-title {
+    color: black;
+  }
+}
