--- a/Juno/tower/src/styles.less
+++ b/Juno/tower/src/styles.less
@@ -8,8 +8,14 @@
 @border-style-base: solid; // style of a components border
 
 nz-spin {
+  width: 100%;
   height: 100%;
+  position: absolute;
+  z-index: 999;
+  pointer-events: none;
   .ng-star-inserted {
+    pointer-events: all;
+    background: white;
     display: flex;
     height: 100%;
     flex-direction: row;
