--- a/Juno/tower/src/app/bench/pages/menu-management/menu-management.component.less
+++ b/Juno/tower/src/app/bench/pages/menu-management/menu-management.component.less
@@ -10,10 +10,16 @@
   }
   .tree-node-btn {
     display: none;
-    opacity: .3;
+    opacity: 0.3;
     &:hover {
       opacity: 1;
     }
+  }
+  .tree-node-title {
+    margin-right: 20px !important;
+  }
+  .tree-node-icon, .tree-node-title {
+    color: #808080;
   }
   .ant-space-item {
     .ant-btn {
@@ -33,11 +39,8 @@
     opacity: 1;
   }
 }
-.tree-node-title {
-  color: #808080;
-}
 .tree-branch-node {
-  .tree-node-title {
+  .tree-node-icon, .tree-node-title {
     color: black;
   }
 }
