--- a/Juno/tower/src/styles.less
+++ b/Juno/tower/src/styles.less
@@ -1,11 +1,4 @@
-@white: #fff;
-@black: #000;
-// Border color
-@border-color-base: hsv(0, 0, 85%); // base border outline a component
-@border-color-split: hsv(0, 0, 94%); // split border inside a component
-@border-color-inverse: @white;
-@border-width-base: 1px; // width of the border for a component
-@border-style-base: solid; // style of a components border
+@import "./theme.less";
 
 nz-spin {
   width: 100%;
@@ -21,5 +14,64 @@ nz-spin {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+  }
+}
+
+.ant-modal-wrap {
+  .ant-modal {
+    overflow: auto;
+    top: 0;
+    height: 100%;
+    padding: 30px 0;
+    &-content {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+    }
+    &-body {
+      overflow: auto;
+      height: 100%;
+    }
+  }
+  .pt10 {
+    padding-top: 10px;
+  }
+  .pt20 {
+    padding-top: 20px;
+  }
+  .pt30 {
+    padding-top: 30px;
+  }
+  .pt40 {
+    padding-top: 40px;
+  }
+  .pt50 {
+    padding-top: 50px;
+  }
+  .pt100 {
+    padding-top: 100px;
+  }
+  .pb10 {
+    padding-bottom: 10px;
+  }
+  .pb20 {
+    padding-bottom: 20px;
+  }
+  .pb30 {
+    padding-bottom: 30px;
+  }
+  .pb40 {
+    padding-bottom: 40px;
+  }
+  .pb50 {
+    padding-bottom: 50px;
+  }
+  .pb100 {
+    padding-bottom: 100px;
+  }
+}
+.big-form {
+  .ant-form-item-label {
+    text-align: left;
   }
 }
