--- a/Juno/tower/src/app/bench/pages/menu-management/menu-management.component.less
+++ b/Juno/tower/src/app/bench/pages/menu-management/menu-management.component.less
@@ -2,7 +2,11 @@
   width: 100%;
   flex-direction: row-reverse;
 }
+.menu-tree-container {
+  overflow: auto;
+}
 .tree-node-template {
+  white-space: nowrap;
   &:hover {
     .tree-node-btn {
       display: block;
