--- a/Juno/tower/src/app/bench/pages/menu-management/menu-management.component.less
+++ b/Juno/tower/src/app/bench/pages/menu-management/menu-management.component.less
@@ -5,6 +5,11 @@
 .menu-tree-container {
   overflow: auto;
 }
+.menu-info-container {
+  .menu-info-pane {
+    min-width: 400px;
+  }
+}
 .tree-node-template {
   white-space: nowrap;
   &:hover {
@@ -22,7 +27,8 @@
   .tree-node-title {
     margin-right: 20px !important;
   }
-  .tree-node-icon, .tree-node-title {
+  .tree-node-icon,
+  .tree-node-title {
     color: #808080;
   }
   .ant-space-item {
@@ -44,7 +50,8 @@
   }
 }
 .tree-branch-node {
-  .tree-node-icon, .tree-node-title {
+  .tree-node-icon,
+  .tree-node-title {
     color: black;
   }
 }
