--- a/Juno/tower/src/app/bench/layout/layout.component.less
+++ b/Juno/tower/src/app/bench/layout/layout.component.less
@@ -19,11 +19,14 @@
 }
 :host ::ng-deep nz-content {
   position: relative;
+  overflow: auto;
+}
+:host ::ng-deep nz-sider {
+  overflow: auto;
 }
 
 .inner-content {
   padding: 16px;
-  background: #f5f5f6;
   height: 100%;
 }
 
@@ -74,7 +77,7 @@
   .app-header {
     position: relative;
     padding: 0 24px;
-    background: #fff;
+    background: @descriptions-bg;
     box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
     &-trigger:hover {
       color: #1890ff;
