--- a/Juno/tower/src/theme.less
+++ b/Juno/tower/src/theme.less
@@ -51,7 +51,7 @@
 // 滚动条里面小方块
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  background-color: @primary-color;
+  background-color: @primary-5;
   background-image: -webkit-linear-gradient(
     45deg,
     rgba(255, 255, 255, 0.2) 25%,
